--- a/website/print.css
+++ b/website/print.css
@@ -31,20 +31,30 @@ A:VISITED {
 	text-decoration : underline;
 	}
 
-.code {
+pre {
     margin-left: 4pt;
     margin-top: 8pt;
     margin-bottom: 8pt;
-    background-color: #FFFFEE;
     white-space: pre;
     border-style: solid;
-    border-width: 1pt;
-    border-color: #999999;
+    border-width: thin;
+    border-color: black;
     padding-top: 2pt;
     padding-bottom: 2pt;
     padding-left: 1%;
+    display: block;
     width: 90%;
 }
+ul {
+	margin-top: 14pt;
+	}
+li p {
+	margin-top: -0.5em;
+	}
+ul ul {
+	margin-top: -1em;
+	margin-bottom: 1em;
+	}
 
 span._linktext {
     text-color: #000000;
